[project]
name = "leomaine"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Shubham", email = "code.shubham.com@gmail.com"},
]
dependencies = [
    "reflex>=0.5.10",
    "pandas>=1.3.3",
    "pydantic>=2.9.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
